# agentic-hdf5

./: .gitignore  AGENTS.md  Dockerfile.sandbox  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements.txt
.claude-plugin/: marketplace.json
.claude/skills/hdf5-cloud-optimized/: SKILL.md
.claude/skills/hdf5-core-vfd/: SKILL.md
.github/workflows/: publish-pypi.yml  test-ahdf5-tools.yml
docs/: docker-sandbox-design.md  semantic-metadata.md  vectorized-semantic-metadata.md
examples/: README.md
examples/filters/: README.md  generate_test_files.py
examples/semantic-metadata/: README.md  generate_smd_file.py  vectorize_file.py
examples/visualization/: README.md  create_viz_test_files.py  test_distribution.h5  test_spatial_field.h5  test_timeseries.h5
plugin/: .mcp.json  CLAUDE.md  README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/hdf5-hsds/: SKILL.md
tests/: chunk_test.py  conftest.py  filter_test.py  md_test.py  smd_test.py  test_cf_compliance.py  test_helpers.py  test_mcp_server.py  test_prompt_injection.py  test_registry.py  test_sandbox.py  test_tool_search.py  vsmd_test.py
tests/agent_tool_selection/: RESULTS.md  conftest.py  test_tool_selection.py
tests/paper-replication/: README.md
tools/: generate_catalog.py  markdown_to_pdf.css  markdown_to_pdf.py  mcp_server.py  sandbox.py  search_tools.py  tool_catalog.json
tools/h5py/: __init__.py  apply_filter_dataset.py  check_cf_compliance.py  collect_objects_for_smd.py  get_object_metadata.py  h5py_constants.py  h5py_helpers.py  query_semantic_metadata.py  read_semantic_metadata.py  rechunk_dataset.py  registry.py  vectorize_semantic_metadata.py  visualize.py  write_semantic_metadata.py  write_smd_batch.py
(+51 files in other folders)
